--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 
 safe:        false
-auto:        false
-server:      false
-server_port: 4000
+port:        4000
 base-url:    /
 
 source:      .
@@ -11,8 +9,8 @@ plugins:     ./_plugins
 
 future:      true
 lsi:         false
-pygments:    true
-markdown:    maruku
+highlighter:    true
+#markdown:    maruku
 
 maruku:
   use_tex:    false
