--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ plugins:     ./_plugins
 
 future:      true
 lsi:         false
-highlighter:    true
+pygments:    true
 #markdown:    maruku
 
 maruku:
